@@ -1,3 +1,7 @@
+2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* Mono.Posix_test.dll.sources: Added Test/Mono.Unix/StdlibTest.cs.
+
 2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Mono.Posix.dll.sources: Add Mono.Unix/StdioFileStream.cs.
